upgrade to Java 17, improve tests